Use valueOf instead of constructor